--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <version>3.1.1.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.7.0</version>
+        </dependency>
 
     </dependencies>
 </project>
